--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">QuickReels</string>
+    <string name="home">Home</string>
+    <string name="post">Post</string>
+    <string name="chat">Chat</string>
+    <string name="account">Account</string>
 </resources>
