--- a/feature/create_post/src/main/res/values/strings.xml
+++ b/feature/create_post/src/main/res/values/strings.xml
@@ -5,4 +5,19 @@
     <string name="close">Close</string>
     <string name="go_to_settings">Go to settings</string>
     <string name="storage_permission_rationale">This app needs permission to access photos and videos on your device.\n\nOpen Settings app and grant this permission.</string>
+    <string name="txt_empty" />
+    <string name="txt_done">Done</string>
+    <string name="txt_title_not_supported">Alert!</string>
+    <string name="txt_msg_not_supported">Sorry, this device is not supported</string>
+    <string name="txt_trimming_video">Processing Video…</string>
+    <string name="txt_failed_to_trim">Failed to trim</string>
+    <string name="txt_cancel">Cancel</string>
+    <string name="txt_dlah">\\</string>
+    <string name="txt_smaller">Video should be smaller than</string>
+    <string name="edit_video">Edit Video</string>
+    <string name="txt_compress_video">Compressing Video…</string>
+    <string name="txt_edt_video">Edit Video</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="open_file_location">Open file location?</string>
 </resources>
