--- a/feature/create_post/src/main/res/values/strings.xml
+++ b/feature/create_post/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="open_file_location">Open file location?</string>
+    <string name="videoCaptionTextIsNotProvided">Please type in a caption</string>
+    <string name="upload_post_confirmation_message">Do you want to upload this post?</string>
 </resources>
