--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="post">Post</string>
     <string name="chat">Chat</string>
     <string name="account">Account</string>
+    <string name="replies">Replies</string>
+    <string name="reply">Reply</string>
+    <string name="comment">Comment</string>
+    <string name="comments">Comments</string>
+    <string name="no_comments">No comment</string>
+    <string name="send">Send</string>
+    <string name="load_more">Load more</string>
+    <string name="close">Close</string>
 </resources>
